name: gueb
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: Daniel Diaz
maintainer: diaz_carrete@yahoo.com
bug-reports: https://github.com/danidiaz/gueb/issues
cabal-version: >=1.10
build-type: Simple

extra-source-files:
    README.md

source-repository head
    type: git
    location: git@github.com:danidiaz/gueb.git

 -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with

executable gueb
    main-is: Main.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded 
    build-depends:         
        base >= 4.7 && < 5
      , gueb

library
    hs-source-dirs: lib
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded 
    exposed-modules:
        Gueb.Main
        Gueb
        Gueb.Types
        Gueb.Types.API
    build-depends:         
        base >= 4.7 && < 5
      , process-streaming >= 0.9.1.0
      , containers >= 0.5.7.0
      , optparse-applicative >= 0.12.1.0
      , aeson >= 0.11.1.1
      , servant >= 0.5
      , servant-server >= 0.5
      , servant-lucid >= 0.5
      , lucid >= 2.9.5
      , text >= 1.2
      , warp >= 3.2
      , wai >= 3.2
      , bytestring >= 0.10
      , lens >= 4.13
      , transformers >= 0.4.3
      , process-streaming >= 0.9.1.0
      , stm >= 2.4.4
      , async >= 2.1.0
      , free >= 4.10
      , comonad >= 4
      , bifunctors >= 4
