name: gueb
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: Daniel Diaz
maintainer: diaz_carrete@yahoo.com
bug-reports: https://github.com/danidiaz/gueb/issues
cabal-version: >=1.10
build-type: Simple

extra-source-files:
    README.md

source-repository head
    type: git
    location: git@github.com:danidiaz/gueb.git

 -- http://stackoverflow.com/questions/12305970/how-to-make-a-haskell-cabal-project-with-libraryexecutables-that-still-run-with

executable gueb
    main-is: Main.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded 
    build-depends:         
        base >= 4.7 && < 5
      , gueb

library
    hs-source-dirs: lib
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded 
    exposed-modules:
        Gueb.Main
        Gueb
        Gueb.Types
        Gueb.Types.API
    build-depends:         
        base                 >= 4.7 && < 5,
        aeson                >= 1.0.2 && < 1.1,
        bytestring           >= 0.10.8 && < 0.11,
        containers           >= 0.5.7 && < 0.6,
        text                 >= 1.2.2 && < 1.3,
        transformers         >= 0.5.2 && < 0.6,
        time                 >= 1.6.0 && < 1.7,
        async                >= 2.1.0 && < 2.2,
        stm                  >= 2.4.4 && < 2.5,
        bifunctors           >= 5.4.1 && < 5.5,
        comonad              >= 5 && < 5.1,
        free                 >= 4.12.4 && < 4.13,
        lens                 >= 4.15.1 && < 4.16,
        lucid                >= 2.9.6 && < 2.10,
        optparse-applicative >= 0.13.0 && < 0.14,
        process-streaming    >= 0.9.1 && < 0.10,
        servant              >= 0.9.1 && < 0.10,
        servant-lucid        >= 0.7.1 && < 0.8,
        servant-server       >= 0.9.1 && < 0.10,
        wai                  >= 3.2.1 && < 3.3,
        warp                 >= 3.2.8 && < 3.3
